--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,17 +32,19 @@ dependencies {
     })
     testImplementation "junit:junit:$rootProject.ext.junitVersion"
 
+    implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
-    implementation "com.flurgle:camerakit:$rootProject.ext.cameraKitVersion"
     implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
 
+    implementation "com.flurgle:camerakit:$rootProject.ext.cameraKitVersion"
     compile("com.github.hotchemi:permissionsdispatcher:$rootProject.ext.permissionsDispatcherVersion") {
         // if you don't use android.app.Fragment you can exclude support for them
         exclude module: "support-v13"
     }
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$rootProject.ext.permissionsDispatcherVersion"
+    implementation "com.davemorrissey.labs:subsampling-scale-image-view:$rootProject.ext.subsamplingScaleImageViewVersion"
 }
