--- a/build.gradle
+++ b/build.gradle
@@ -62,4 +62,5 @@ ext {
     localyticsVersion = '4.0.1'
     firebaseLibrariesVersion = '11.0.2'
     picassoVersion = '2.5.2'
+    recyclerviewAnimators = '2.2.7'
 }
