--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     compile "com.adobe.creativesdk:image:$rootProject.ext.creativesdkImageVersion"
     compile "com.localytics.android:library:$rootProject.ext.localyticsVersion"
     compile "com.squareup.picasso:picasso:$rootProject.ext.picassoVersion"
-    compile 'jp.wasabeef:recyclerview-animators:'
+    compile "jp.wasabeef:recyclerview-animators:$rootProject.ext.recyclerviewAnimatorsVersion"
     compile "com.google.firebase:firebase-crash:$rootProject.ext.firebaseLibrariesVersion"
     compile "com.google.firebase:firebase-core:$rootProject.ext.firebaseLibrariesVersion"
 }
